@@ -33,6 +33,8 @@ Version 3.1.0 - SVN
  - Add JavaScript colour picker to balloon colour edit box, using
    jscolor 1.3.1 by Jan Odvárko.
  - Improve layout and usability of displayed tables.
+ - Add "viewing" to verification status in jury submission list, idea
+   from DomJudge@FAU.
 
 Version 3.0.0 Release Candidate 2 - 3 September 2009
 ----------------------------------------------------
